--- a/EdgeExtension/0FA-Edge/popup/popup.html
+++ b/EdgeExtension/0FA-Edge/popup/popup.html
@@ -15,10 +15,12 @@
       cursor: pointer;
     }
   </style>
+  
 </head>
 <body>
-  <h1>iLearn Login Extension</h1>
+  <h1 id="RANDOM_WORD">iLearn Login Extension</h1>
   <button id="loginButton">Login to iLearn</button>
+  <script src="script.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
